--- a/BD/16042020/Taifa.html
+++ b/BD/16042020/Taifa.html
@@ -1,5 +1,7 @@
 <html><title>শুভ জন্মদিন তাইফা </title>
- <center><h1>শুভ জন্মদিন ইনতিফা আমান তাইফা 😍</h1>
+ <center>
+<img scr="শুভ-জন্মদিন.jpg"><br>
+<h1>শুভ জন্মদিন ইনতিফা আমান তাইফা 😍</h1>
 <h2>শুভ জন্মদিন হাইসিজি😇</h2>
 <h3>শুভ জন্মদিন দুর্ধর্ষ কোডার 😉</h3>
  <h4>শুভ জন্মদিন সিআর আপু 😊</h4>
