--- a/BD/16042020/Taifa.html
+++ b/BD/16042020/Taifa.html
@@ -1,17 +1,17 @@
 <html><title>শুভ জন্মদিন তাইফা </title>
  <center>
-<img scr="https://github.com/rahatcse5bu/rahatcse5bu.github.io/blob/master/BD/16042020/%E0%A6%B6%E0%A7%81%E0%A6%AD-%E0%A6%9C%E0%A6%A8%E0%A7%8D%E0%A6%AE%E0%A6%A6%E0%A6%BF%E0%A6%A8.jpg"><br>
+<img scr="https://github.com/rahatcse5bu/rahatcse5bu.github.io/blob/master/BD/16042020/%E0%A6%B6%E0%A7%81%E0%A6%AD-%E0%A6%9C%E0%A6%A8%E0%A7%8D%E0%A6%AE%E0%A6%A6%E0%A6%BF%E0%A6%A8.jpg" alt="Taifa's Birthday"><br>
 <h1>শুভ জন্মদিন ইনতিফা আমান তাইফা 😍</h1>
 <h2>শুভ জন্মদিন হাইসিজি😇</h2>
 <h3>শুভ জন্মদিন দুর্ধর্ষ কোডার 😉</h3>
  <h4>শুভ জন্মদিন সিআর আপু 😊</h4>
-<h5>শুভ জন্মদিন কুলেস্ট গার্ল ☺</h5>
+<h5>শুভ জন্মদিন কুলেস্ট গার্ল 😊</h5>
 <h6>শুভ জন্মদিন মাল্টিট্যালেন্টেড আপু 😍 </h6>
  <ul>
 <li>আশা করি আজকের এই বিশেষ দিনে প্রত্যেকটি মুহূর্ত যেন আনন্দ এবং খুশি দিয়ে ভরে ওঠে।
 
 </li>
-<li>আজকের তোর জন্মদিন। আর এই বিশেষ দিনে আমার তরফ থেকে তোকে অনেক ভালোবাসা এবং প্রচুর শুভেচ্ছা জানাচ্ছি। আল্লাহ তোর মঙ্গল করুক। শুভ জন্মদিন বন্ধু।😍😍😍
+<li>আজকের তোর জন্মদিন। আর এই বিশেষ দিনে আমার তরফ থেকে তোকে অনেক ভালোবাসা এবং প্রচুর শুভেচ্ছা জানাচ্ছি। আল্লাহ তোর মঙ্গল করুক। শুভ জন্মদিন দোস্ত।😍😍😍
 </li>
 <li>
 .............
