--- a/BD/16042020/Taifa.html
+++ b/BD/16042020/Taifa.html
@@ -1,6 +1,6 @@
 <html><title>শুভ জন্মদিন তাইফা </title>
  <center>
-<img scr="https://github.com/rahatcse5bu/rahatcse5bu.github.io/blob/master/BD/16042020/%E0%A6%B6%E0%A7%81%E0%A6%AD-%E0%A6%9C%E0%A6%A8%E0%A7%8D%E0%A6%AE%E0%A6%A6%E0%A6%BF%E0%A6%A8.jpg" alt="Taifa's Birthday"><br>
+<img scr="https://drive.google.com/file/d/1UOy18H7yfX2RunttkNoquWRWW8p-3DpG/view?usp=drivesdk" alt="Taifa's Birthday"><br>
 <h1>শুভ জন্মদিন ইনতিফা আমান তাইফা 😍</h1>
 <h2>শুভ জন্মদিন হাইসিজি😇</h2>
 <h3>শুভ জন্মদিন দুর্ধর্ষ কোডার 😉</h3>
