--- a/BD/16042020/Taifa.html
+++ b/BD/16042020/Taifa.html
@@ -1,6 +1,6 @@
 <html><title>শুভ জন্মদিন তাইফা </title>
  <center>
-<img scr="https://drive.google.com/file/d/1UOy18H7yfX2RunttkNoquWRWW8p-3DpG/view?usp=drivesdk" alt="Taifa's Birthday"><br>
+<img scr="/images.png" alt="Taifa's Birthday"><br>
 <h1>শুভ জন্মদিন ইনতিফা আমান তাইফা 😍</h1>
 <h2>শুভ জন্মদিন হাইসিজি😇</h2>
 <h3>শুভ জন্মদিন দুর্ধর্ষ কোডার 😉</h3>
