--- a/BD/16042020/Taifa.html
+++ b/BD/16042020/Taifa.html
@@ -1,6 +1,6 @@
 <html><title>শুভ জন্মদিন তাইফা </title>
  <center>
-<img scr="images.png" alt="Today Is Taifa's Birthday"><br>
+<img scr="images.png" alt="Taifa's Birthday"><br>
 <h1>শুভ জন্মদিন ইনতিফা আমান তাইফা 😍</h1>
 <h2>শুভ জন্মদিন হাইসিজি😇</h2>
 <h3>শুভ জন্মদিন দুর্ধর্ষ কোডার 😉</h3>
@@ -13,8 +13,8 @@
 </li>
 <li>আজকের তোর জন্মদিন। আর এই বিশেষ দিনে আমার তরফ থেকে তোকে অনেক ভালোবাসা এবং প্রচুর শুভেচ্ছা জানাচ্ছি। আল্লাহ তোর মঙ্গল করুক। শুভ জন্মদিন দোস্ত।😍😍😍
 </li>
-<li>
-.............
+<lI>
+Today is the start of something beautiful. A new dawn and a fresh start. Exploit and conquer everything that comes your way. Happy birthday best friend.
 
 </li>
 
