--- a/BD/16042020/Taifa.html
+++ b/BD/16042020/Taifa.html
@@ -14,7 +14,7 @@
 <li>আজকের তোর জন্মদিন। আর এই বিশেষ দিনে আমার তরফ থেকে তোকে অনেক ভালোবাসা এবং প্রচুর শুভেচ্ছা জানাচ্ছি। আল্লাহ তোর মঙ্গল করুক। শুভ জন্মদিন দোস্ত।😍😍😍
 </li>
 <lI>
-Today is the start of something beautiful. A new dawn and a fresh start. Exploit and conquer everything that comes your way. Happy birthday best friend.
+Today is the start of something beautiful. A new dawn and a fresh start. Exploit and conquer everything that comes your way. Again, Happy birthday best friend.
 
 </li>
 
