--- a/BD/16042020/Taifa.html
+++ b/BD/16042020/Taifa.html
@@ -13,15 +13,16 @@
 </li>
 <li>আজকের তোর জন্মদিন। আর এই বিশেষ দিনে আমার তরফ থেকে তোকে অনেক ভালোবাসা এবং প্রচুর শুভেচ্ছা জানাচ্ছি। আল্লাহ তোর মঙ্গল করুক। শুভ জন্মদিন দোস্ত।😍😍😍
 </li>
-<lI>
-Today is the start of something beautiful. A new dawn and a fresh start. Exploit and conquer everything that comes your way. Again, Happy birthday best friend.
-
-</li>
 
 <li>
-
-.....?......?
+  ক্লাস নোট,প্রশ্ন, প্রবলেম সল্যুশন দিয়ে বরাবরের মতো হেল্প করিস --- এটাই প্রত্যাশা 😇!  জীবনে অনেক দুর এগিয়ে যা,সর্বশক্তিমান আল্লাহ তোর সহায় হোক 😎
 </li>
+
+<lI>
+Today is the start of something beautiful. A new dawn and a fresh start. Exploit and conquer everything that comes your way. Again, Happy birthday dost.
+
+</li>
+
 
 
 </ul>
