--- a/BD/16042020/Taifa.html
+++ b/BD/16042020/Taifa.html
@@ -1,4 +1,27 @@
-<html><title>শুভ জন্মদিন তাইফা </title>
+<html>
+<head>
+
+<title>শুভ জন্মদিন তাইফা </title>
+
+<style>
+body {
+  background-color: lightblue;
+}
+
+h1,h2,h3,h4,h5,h6{
+  color: white;
+  text-align: center;
+}
+
+* {
+  font-family: verdana;
+  font-size: 20px;
+}
+</style>
+</head>
+
+
+<body>
  <center>
 <img scr="images.png" alt="Taifa's Birthday"><br>
 <h1>শুভ জন্মদিন ইনতিফা আমান তাইফা 😍</h1>
@@ -27,4 +50,5 @@ Today is the start of something beautiful. A new dawn and a fresh start. Exploit
 
 </ul>
 </center>
+</body>
 </html>
