--- a/BD/16042020/Taifa.html
+++ b/BD/16042020/Taifa.html
@@ -30,6 +30,15 @@ h1,h2,h3,h4,h5,h6{
  <h4>শুভ জন্মদিন সিআর আপু 😊</h4>
 <h5>শুভ জন্মদিন কুলেস্ট গার্ল 😊</h5>
 <h6>শুভ জন্মদিন মাল্টিট্যালেন্টেড আপু 😍 </h6>
+
+
+
+<h2>Birthday Wishes For You:</h2>
+<iframe src="http://docs.google.com/gview?url=http://domain.com/pdf.pdf&embedded=true" 
+style="width:600px; height:500px;" frameborder="0"></iframe>
+
+
+
  <ul>
 <li>আশা করি আজকের এই বিশেষ দিনে প্রত্যেকটি মুহূর্ত যেন আনন্দ এবং খুশি দিয়ে ভরে ওঠে।
 
