--- a/BD/16042020/Taifa.html
+++ b/BD/16042020/Taifa.html
@@ -34,8 +34,8 @@ h1,h2,h3,h4,h5,h6{
 
 
 <h2>Birthday Wishes For You:</h2>
-<object data="https://drive.google.com/file/d/1WwIu5HBITIbyq9xnBXgswu9kbp9toXA1/view?usp=drivesdk" 
-></object>
+<iframe src="https://drive.google.com/file/d/1WwIu5HBITIbyq9xnBXgswu9kbp9toXA1/view?usp=drivesdk" 
+></iframe>
 
 
 
