--- a/BD/16042020/Taifa.html
+++ b/BD/16042020/Taifa.html
@@ -34,6 +34,11 @@ h1,h2,h3,h4,h5,h6{
 
 
 <h2>Birthday Wishes For You:</h2>
+
+
+Here is the code you can use for every browser:
+
+<embed src="https://drive.google.com/file/d/1WwIu5HBITIbyq9xnBXgswu9kbp9toXA1/view?usp=drivesdk" width="600" height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
 <iframe src="https://drive.google.com/file/d/1WwIu5HBITIbyq9xnBXgswu9kbp9toXA1/view?usp=drivesdk" 
 ></iframe>
 
