--- a/BD/16042020/Taifa.html
+++ b/BD/16042020/Taifa.html
@@ -35,9 +35,8 @@ h1,h2,h3,h4,h5,h6{
 
 <h2>Birthday Wishes For You:</h2>
 
-<iframe src="https://drive.google.com/file/d/1WwIu5HBITIbyq9xnBXgswu9kbp9toXA1/view?usp=drivesdk" 
-></iframe>
 
+<iframe width="100%" height="600" src="https://www.docdroid.net/H9VZUil/taifa-pdf" frameborder="0" allowtransparency allowfullscreen></iframe>
 
 
  <ul>
